Fixed PMD warning.